# vyatta-interfaces

./: .gitignore  AUTHORS  LICENSE  Makefile.am  NEWS  README  configure.ac
debian/: changelog  control  copyright  libvyatta-interface-perl.install  libvyatta-vrfinterface-perl.install  python3-vyatta-interfaces.install  python3-vyatta-platform-detect.install  rules  vyatta-interfaces-base.install  vyatta-interfaces-dataplane-switch-v1-yang.install  vyatta-interfaces-erspan-v1-yang.install  vyatta-interfaces-loopback-v1-yang.install  vyatta-interfaces-policy-uplink-v1-yang.install  vyatta-interfaces-policy-v1-yang.install  vyatta-interfaces-pppoe-resources-chap-v1-yang.install  vyatta-interfaces-pppoe-v1-yang.install  vyatta-interfaces-pppoe.install  vyatta-interfaces-pppoe.links  vyatta-interfaces-routing-instance.install  vyatta-interfaces-switch-deviations-siad-v1-yang.install  vyatta-interfaces-switch-policy-v1-yang.install  vyatta-interfaces-switch-v1-yang.install  vyatta-interfaces-switch-vif-policy-v1-yang.install  vyatta-interfaces-switch-vif-sflow-v1-yang.install  vyatta-interfaces-switch-vif-tcp-mss-v1-yang.install  vyatta-interfaces-system-bridge-v1-yang.install  vyatta-interfaces-system-groups-v1-yang.install  vyatta-interfaces-system-support.install  vyatta-interfaces-system-v1-yang.install  vyatta-interfaces-tunnel-deviations-broadcom-dpp-v1-yang.install  vyatta-interfaces-tunnel-deviations-siad-v1-yang.install  vyatta-interfaces-tunnel-transport-routing-instance-v1-yang.install  vyatta-interfaces-tunnel-v1-yang.install  vyatta-interfaces-v1-yang.install  vyatta-interfaces-vfp-unnumbered-v1-yang.install  vyatta-interfaces-vfp-v1-yang.install  vyatta-interfaces-vif-v1-yang.install  vyatta-interfaces-vif-v2-yang.install  vyatta-interfaces-vti-v1-yang.install  vyatta-interfaces.install  (+16 more)
notify-intf/: Makefile.am  main.go
platform/: vyatta-interfaces-switch-policy-qos.platform  vyatta-interfaces-switch.platform  vyatta-interfaces-tunnel.platform
scripts/: check-interface-exists.pl  ifstats-op-mode  interface-address-check  validate-interfaces.pl  vrf-bind-interface  vyatta-address  vyatta-interfaces-garp  vyatta-interfaces-tunnel-erspan  vyatta-interfaces.pl  vyatta-intf-create  vyatta-intf-end  vyatta-intf-vfp  vyatta-platform-default  vyatta-platform-util  vyatta-show-interfaces.pl  vyatta-switch  vyatta-switch-master  vyatta-switch-op  vyatta-switch-state  vyatta-switch-stp-op  vyatta-switchport  vyatta-system-interface  vyatta-system-intf-end  vyatta-tunnel-deferred.pl  vyatta-tunnel-encap-to-type  vyatta-unnumbered-update-donor.pl  vyatta-update-chap  vyatta-update-unnumbered.pl  vyatta-update-vifs  vyatta-vxlan-op
sysconf/: hardware-features  netdevice  system  virtual-feature-point
systemd/: vyatta-platform-default.service  vyatta-pppoe@.service
tests/: DSCP.sh  Makefile.am  interface.pl  interface.t  isip.pl  switch.conf  switchconfig.sh  vyatta-address.t  vyatta-interfaces.t
udev/: 10-vyatta-interfaces-v1.rules
yang/: vyatta-interfaces-dataplane-switch-v1.yang  vyatta-interfaces-erspan-v1.yang  vyatta-interfaces-loopback-v1.yang  vyatta-interfaces-policy-uplink-v1.yang  vyatta-interfaces-policy-v1.yang  vyatta-interfaces-pppoe-resources-chap-v1.yang  vyatta-interfaces-pppoe-v1.yang  vyatta-interfaces-switch-policy-v1.yang  vyatta-interfaces-switch-v1.yang  vyatta-interfaces-switch-vif-policy-v1.yang  vyatta-interfaces-switch-vif-sflow-v1.yang  vyatta-interfaces-switch-vif-tcp-mss-v1.yang  vyatta-interfaces-system-bridge-v1.yang  vyatta-interfaces-system-groups-v1.yang  vyatta-interfaces-v1.yang  (+23 more)
yang-platform/: vyatta-interfaces-switch-deviations-siad-v1.yang  vyatta-interfaces-tunnel-deviations-broadcom-dpp-v1.yang  vyatta-interfaces-tunnel-deviations-siad-v1.yang
(+196 files in other folders)
